ipc/ipdl/test/ipdl/error/PIntrPriority.ipdl
//error: intr message `Msg' cannot specify [Priority]

intr protocol PIntrPriority {
child:
  [Priority=high] intr Msg();
};
